--- a/SpinningWheel/SpinningWheel.csproj
+++ b/SpinningWheel/SpinningWheel.csproj
@@ -8,4 +8,10 @@
 
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'https' " />
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'http' " />
+  <ItemGroup>
+    <None Remove="Views\EnterName\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Views\EnterName\" />
+  </ItemGroup>
 </Project>
