add db connection, display count pengunjung, display user's name, add idle timeout

--- a/SpinningWheel/appsettings.json
+++ b/SpinningWheel/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=gsportal-DEV01;Database=db_spinthewheel;User Id=user_dev01;Password=KataSandiBaru@2023;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
