--- a/SpinningWheel/SpinningWheel.csproj
+++ b/SpinningWheel/SpinningWheel.csproj
@@ -22,4 +22,11 @@
   <ItemGroup>
     <Content Remove="wwwroot\videos\" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.15" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.15">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
 </Project>
