--- a/SpinningWheel/appsettings.json
+++ b/SpinningWheel/appsettings.json
@@ -1,5 +1,6 @@
 ﻿{
   "ConnectionStrings": {
+    //"DefaultConnection": "Server=(localdb)\\spinningwheel;Database=db_spinthewheel;TrustServerCertificate=True;"
     "DefaultConnection": "Server=gsportal-DEV01;Database=db_spinthewheel;User Id=user_dev01;Password=KataSandiBaru@2023;TrustServerCertificate=True;"
   },
   "Logging": {
